#1137 Added embedded JRE for Win and Linux